// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Onboarding /> BioForm renders properly 1`] = `
preact-render-spy (1 nodes)
-------
<div class="onboarding-body">
  <div class="onboarding-main">
    <div class="onboarding-content about">
      <h1>About You!</h1>
      <form>
        <label htmlFor="summary">
          Tell the community about yourself! Write a quick bio about what you do, what you're interested in, or anything else!
          <textarea
            name="summary"
            onChange={[Function bound handleChange]}
            maxLength="120"
          >
          </textarea>
        </label>
      </form>
    </div>
    <nav class="onboarding-navigation">
      <button
        onClick={[Function bound prevSlide]}
        class="back-button"
        type="button"
      >
        BACK
      </button>
      <button
        onClick={[Function bound onSubmit]}
        class="next-button"
        type="button"
      >
        Continue
      </button>
    </nav>
  </div>
</div>

`;

exports[`<Onboarding /> CloseSlide renders properly 1`] = `
preact-render-spy (1 nodes)
-------
<div class="onboarding-body">
  <div class="onboarding-main">
    <div class="onboarding-content">
      <h1>
        Congrats 
        <span
          role="img"
          aria-label="tada"
        >
          🎉
        </span>
         you‘re officially part of the DEV community!
      </h1>
      <ul>
        <li>
          Join the 
          <a href="/welcome">Welcome Thread</a>
        </li>
        <li>
          <a href="/new">Write</a>
           your own DEV post
        </li>
        <li>
          <a href="/top/infinity">Read</a>
           some of the most popular all time posts
        </li>
        <li>
          <a href="/settings">Customize</a>
           your profile
        </li>
      </ul>
    </div>
    <nav class="onboarding-navigation">
      <button
        onClick={[Function bound prevSlide]}
        class="back-button"
        type="button"
      >
        BACK
      </button>
    </nav>
  </div>
</div>

`;

exports[`<Onboarding /> EmailTermsConditionsForm renders properly 1`] = `
preact-render-spy (1 nodes)
-------
<div class="onboarding-body">
  <div class="onboarding-main">
    <div class="onboarding-content checkbox-slide">
      <h2>Some things to check off!</h2>
      <form>
        <label htmlFor="checked_code_of_conduct">
          <input
            type="checkbox"
            name="checked_code_of_conduct"
            id="checked_code_of_conduct"
            checked={false}
            onChange={[Function bound handleChange]}
           />
          You agree to uphold our 
          <a href="/code-of-conduct">Code of Conduct</a>
        </label>
        <label htmlFor="checked_terms_and_conditions">
          <input
            type="checkbox"
            id="checked_terms_and_conditions"
            name="checked_terms_and_conditions"
            checked={false}
            onChange={[Function bound handleChange]}
           />
          You agree to our 
          <a href="/terms">Terms and Conditions</a>
        </label>
        <h3>Email Preferences</h3>
        <label htmlFor="email_membership_newsletter">
          <input
            type="checkbox"
            name="email_membership_newsletter"
            checked={true}
            onChange={[Function bound handleChange]}
           />
          Do you want to receive our weekly newsletter emails?
        </label>
        <label htmlFor="email_digest_periodic">
          <input
            type="checkbox"
            name="email_membership_newsletter"
            checked={true}
            onChange={[Function bound handleChange]}
           />
          Do you want to receive a periodic digest with some of the top posts from your tags?
        </label>
      </form>
    </div>
    <nav class="onboarding-navigation">
      <button
        onClick={[Function bound prevSlide]}
        class="back-button"
        type="button"
      >
        BACK
      </button>
      <button
        onClick={[Function bound onSubmit]}
        class="next-button"
        type="button"
      >
        Continue
      </button>
    </nav>
  </div>
</div>

`;

exports[`<Onboarding /> FollowTags renders properly 1`] = `
preact-render-spy (1 nodes)
-------
<div class="onboarding-body">
  <div class="onboarding-main">
    <div class="onboarding-content">
      <h2>Follow some tags!</h2>
      <div class="scroll">
        <button
          type="button"
          onClick={[Function onClick]}
          style="background-color: #000000; color: #ffffff; opacity: 1;"
          class="tag"
        >
          #discuss
        </button>
        <button
          type="button"
          onClick={[Function onClick]}
          style="background-color: #f7df1e; color: #000000; opacity: 1;"
          class="tag"
        >
          #javascript
        </button>
        <button
          type="button"
          onClick={[Function onClick]}
          style="background-color: #2a2566; color: #ffffff; opacity: 1;"
          class="tag"
        >
          #career
        </button>
      </div>
    </div>
    <nav class="onboarding-navigation">
      <button
        onClick={[Function bound prevSlide]}
        class="back-button"
        type="button"
      >
        BACK
      </button>
      <button
        onClick={[Function bound handleComplete]}
        class="next-button"
        type="button"
      >
        Continue
      </button>
    </nav>
  </div>
</div>

`;

exports[`<Onboarding /> FollowUsers renders properly 1`] = `
preact-render-spy (1 nodes)
-------
<div class="onboarding-body">
  <div class="onboarding-main">
    <div class="onboarding-content">
      <h2>Follow some users!</h2>
      <div class="scroll">
        <button
          type="button"
          style="background-color: white;"
          onClick={[Function onClick]}
          class="user"
        >
          <img
            src="ben.jpg"
            alt=""
           />
          Ben Halpern
        </button>
        <button
          type="button"
          style="background-color: white;"
          onClick={[Function onClick]}
          class="user"
        >
          <img
            src="clown.jpg"
            alt=""
           />
          Krusty the Clown
        </button>
        <button
          type="button"
          style="background-color: white;"
          onClick={[Function onClick]}
          class="user"
        >
          <img
            src="dev.jpg"
            alt=""
           />
          dev.to staff
        </button>
      </div>
    </div>
    <nav class="onboarding-navigation">
      <button
        onClick={[Function bound prevSlide]}
        class="back-button"
        type="button"
      >
        BACK
      </button>
      <button
        onClick={[Function bound handleComplete]}
        class="next-button"
        type="button"
      >
        Continue
      </button>
    </nav>
  </div>
</div>

`;

exports[`<Onboarding /> IntroSlide renders properly 1`] = `
preact-render-spy (1 nodes)
-------
<div class="onboarding-body">
  <div class="onboarding-main">
    <div class="onboarding-content">
      <h1>
        <span>Welcome to the </span>
        <img
          src="/assets/purple-dev-logo.png"
          class="sticker-logo"
          alt="DEV"
         />
        <span>community!</span>
      </h1>
      <p>
        DEV is where programmers share ideas and help each other grow. It’s a global community for contributing and discovering great ideas, having debates, and making friends.
      </p>
      <p>
        A couple quick questions for you before you get started...
      </p>
    </div>
    <nav class="onboarding-navigation">
      <button
        onClick={[Function bound onSubmit]}
        class="next-button"
        type="button"
      >
        Continue
      </button>
    </nav>
  </div>
</div>

`;

exports[`<Onboarding /> PersonalInformationForm renders properly 1`] = `
preact-render-spy (1 nodes)
-------
<div class="onboarding-body">
  <div class="onboarding-main">
    <div class="onboarding-content about">
      <h1>About You!</h1>
      <form>
        <label htmlFor="location">
          Where are you located?
          <input
            type="text"
            name="location"
            id="location"
            onChange={[Function bound handleChange]}
            maxLength="60"
           />
        </label>
        <label htmlFor="employment_title">
          What is your title?
          <input
            type="text"
            name="employment_title"
            id="employment_title"
            onChange={[Function bound handleChange]}
            maxLength="60"
           />
        </label>
        <label htmlFor="employer_name">
          Where do you work?
          <input
            type="text"
            name="employer_name"
            id="employer_name"
            onChange={[Function bound handleChange]}
            maxLength="60"
           />
        </label>
      </form>
    </div>
    <nav class="onboarding-navigation">
      <button
        onClick={[Function bound prevSlide]}
        class="back-button"
        type="button"
      >
        BACK
      </button>
      <button
        onClick={[Function bound onSubmit]}
        class="next-button"
        type="button"
      >
        Continue
      </button>
    </nav>
  </div>
</div>

`;
